chore(company-setting): adjust and optimize company setting API